# weibo-sdk

./: Makefile  Makefile.am  ProjectHome.md  WeiboSDK-VS2008.sln  WeiboSDK_VC90.vcproj  configure.ac  stdafx.h
include/: IWeibo.hxx  IWeiboDef.hxx  IWeiboMethod.hxx  ParsingObject.hxx
include/WeiboSDK/: IWeiboDef.hxx
lib/Darwin/: libWeiboSDK.0.0.0.dylib  libWeiboSDK.0.dylib
lib/Debug/: WeiboSDK_VC90.exp  WeiboSDK_VC90.lib
lib/Linux/: libWeiboSDK.la  libWeiboSDK.so.0.0.0
lib/Release/: WeiboSDK_VC90.exp  WeiboSDK_VC90.lib
src/: SDKHelper.cxx  SDKHelper.hxx  SDKManager.cxx  SDKManager.hxx  SDKMethodImpl.cxx  SDKMethodImpl.hxx  SDKRequest.hxx  WeiboSDK_VC90.vcproj  config.h
src/Inline/: Account.inl  Comment.inl  DirectMessage.inl  Favorites.inl  FriendShip.inl  Groups.inl  Search.inl  ShortURL.inl  Statuses.inl  Suggestions.inl  Tags.inl  Trends.inl  Unread.inl  Users.inl
src/Interface/: compat.hxx
src/Parsing/: ParsingHandle.cxx  ParsingHandle.hxx  ParsingObject.cxx  ParsingObject.hxx
test/: Makefile  ParsingDataStruct.cpp  ParsingDataStruct.cxx  ParsingDataStruct.h  ParsingDataStruct.hxx  ParsingDefine.hxx  UNITTestIDBuilderPolicy.cpp  UNITTestIDBuilderPolicy.h  WeiboTestCase.cpp  WeiboTestCase.h  WeiboTestCaseHelper.h  WeiboUnitTest.cpp  WeiboUnitTest.vcproj  WeiboUnitTestHelper.cpp  stdafx.cpp  stdafx.h
testiOS/testiOS/: AppDelegate.h  AppDelegate.mm  ViewController.h  ViewController.m  main.m  testiOS-Info.plist  testiOS-Prefix.pch
testiOS/testiOS.xcodeproj/: project.pbxproj
testiOS/testiOS.xcodeproj/xcuserdata/Welbon.xcuserdatad/xcschemes/: testiOS.xcscheme  xcschememanagement.plist
testiOS/testiOS/en.lproj/: MainStoryboard_iPhone.storyboard
win32/: WeiboSDK-VS2008.sln
xcode/weibo-sdk.xcworkspace/: contents.xcworkspacedata
xcode/weibo-sdk.xcworkspace/xcuserdata/Welbon.xcuserdatad/: UserInterfaceState.xcuserstate
xcode/weibosdk.xcodeproj/: project.pbxproj
xcode/weibosdk.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
xcode/weibosdk.xcodeproj/project.xcworkspace/xcuserdata/Welbon.xcuserdatad/: UserInterfaceState.xcuserstate
xcode/weibosdk.xcodeproj/xcuserdata/Welbon.xcuserdatad/xcschemes/: weibosdk.xcscheme  xcschememanagement.plist
